# TreeMenu

./: docker-compose-up-trader.yml  pyproject.toml
menu_app/app/: models.py  urls.py  views.py
menu_app/app/migrations/: 0001_initial.py  0002_insertdata.py
menu_app/app/static/app/css/: main.css
menu_app/app/templates/app/: base.html  page.html
menu_app/app/templatetags/: tree_menu.py
menu_app/menu/: settings.py  urls.py
